--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 PORT=3000
 
 # Database Configuration
-MONGO_URI=mongodb+srv://Nishant:DoctorNishant@cluster0.c7vwwxg.mongodb.net/PulseCare?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://collegecrush00:Dragonball9@cluster0.3wzgp.mongodb.net/CollegeCrush?retryWrites=true&w=majority&appName=Cluster0
 
 # API Keys
 GOOGLE_API_KEY=your_google_api_key_here
@@ -13,8 +13,8 @@ SECRET_KEY=your_secret_key_here
 DEBUG=true
 
 # Nodemailer Configuration
-PulseCareEmail=pulsecare39@gmail.com
-EmailPassword=dfrdgsyceijohrli
+PulseCareEmail=collegecrush00@gmail.com
+EmailPassword=wzwxmvlwgwtczkvk
 
 #JWT Secret
 JwtSecret=DoctorNishant
